--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   href: /
 - text: Future Workshops
   menu: # Dropdown menu (one level deep only)
-  - text: Introduction to GADMA (Virtual, 19 November 2024)
-    href: /future_workshops/2024-11-19/
+  - text: Workshop on Demographic Inference (Hybrid, 18-19 November 2024)
+    href: /future_workshops/2024-11-18-19/
   - text: ConGen course (Namibia, 5-15 January 2025)
-    href: /future_workshops/2025-01-05/
+    href: /future_workshops/2025-01-05-15/
